# AlgoTrain

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Solutions/: ArraySolutions.h  BackTracking.h  BasicDataStructure.h  BinaryTree.h  DoublePointerCollection.h  DynamicPlanning.h  Greedy.h  HashTableOperations.h  LinkedListOperations.h  Solution.h  StackAndQueue.h  StringOperations.h
